# rroson.github.io

./: .env  index.html  main_style.css  pyproject.toml
curriculo/: app.py
static/css/: main_style.css
templates/: forms.html  index.html
